--- a/r-scripts/Makefile.am
+++ b/r-scripts/Makefile.am
@@ -3,4 +3,6 @@ rscriptsdir = @datadir@/@PACKAGE@/r-scripts
 dist_rscripts_DATA = maximumIsometricForce.R \
 		     sprintUtil.R \
 		     sprintPhotocells.R \
-		     sprintRadar.R
+		     sprintRadar.R \
+		     sprintEncoder.R \
+		     scripts-util.R
