Run: instant images for contact/! contact with photocells

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -428,6 +428,7 @@ RESOURCES = \
 	../images/md/ic_directions_run_blue_24dp_2x.png,run.png \
 	../images/md/ic_directions_run_simple_blue_24dp_1x.png,image_run_simple.png \
 	../images/md/ic_directions_run_multiple_blue_24dp_1x.png,image_run_multiple.png \
+	../images/md/ic_directions_run_photocell_blue_24dp_2x.png,run_photocell.png \
 	../images/md/ic_directions_run_track_blue_24dp_1x.png,run_track_distance.png \
 	../images/md/ic_build_blue_24dp_1x.png,image_build_24.png \
 	../images/md/ic_build_blue_16dp_1x.png,image_build_16.png \
